chromium giant whitespace fix

--- a/src/styles/layout/pages/_home.scss
+++ b/src/styles/layout/pages/_home.scss
@@ -68,10 +68,6 @@
     &__image {
       flex: 1;
       width: 100%;
-
-      @media (max-width: 768px) {
-        visibility: collapse;
-      }
     }
 
     h3 {
